# mdr_tree_style_tabs

./: CMakeLists.txt  README.org  TreeStyleTabs.cpp  TreeStyleTabs.hpp  TreeStyleTabs.qrc  main.cpp
details/: ITabWidget.hpp  Node.cpp  Node.hpp  TabData.cpp  TabData.hpp  TabWidget.cpp  TabWidget.hpp
icons/: close.xcf
src/: ITabWidget.cpp  Node.cpp  TabWidgetFactory.cpp  TreeStyleTabs.cpp
src/details/: DragAndDropFilter.cpp  NodeUtils.cpp  NodeUtils.hpp  TabWidget.cpp  TabWidget.hpp  between.hpp  debug.hpp
src/include/mdrTreeStyleTabs/: ITabWidget.hpp  ITabWidgetFactory.hpp  Node.hpp  TabWidgetFactory.hpp  TreeStyleTabs.hpp
src/include/mdrTreeStyleTabs/details/: DragAndDropFilter.hpp
